# solas

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
ScenarioViewer/: CMakeLists.txt  CmakeLists.txt
ScenarioViewer/src/: Game.cpp  Game.h  LightsDemo.cpp  ScenarioViewer.cpp  ScenarioViewer.h
ScenarioViewer/src/Scenarios/: Scenarios.cpp  Scenarios.h
SolasLib/: CMakeLists.txt
SolasLib/include/SolasLib/: core.hpp
SolasLib/include/SolasLib/SimpleRayCast/: RayCast.hpp  SimpleRayCast.hpp
SolasLib/include/SolasLib/core/: ChunkMap.hpp  IGameObject.hpp  Light.hpp  LightCaster.hpp  LightmapManager.hpp  TileLightState.hpp
SolasLib/src/SolasLib/: ChunkMap.cpp  DiscreteLinePather.cpp  DiscreteLinePather.hpp  LightmapManager.cpp  RayCastUtils.cpp  RayCastUtils.hpp  Rectangle.hpp
SolasLib/src/SolasLib/BoundRayCast/: BoundRayCast.cpp  BoundRayCast.hpp
SolasLib/src/SolasLib/ShadowCast/: ShadowCast.cpp  ShadowCast.hpp
SolasLib/src/SolasLib/SimpleRayCast/: RayCast.cpp  SimpleRayCast.cpp  SimpleRayCast.hpp
scripts/: Pipfile
scripts/linux/: bootstrap.sh  release.sh  scenarioViewer.sh  test.sh
scripts/osx/: benchmark.sh  bootstrap.sh  bootstrapMac.sh  buildMac.sh  debug.sh  lint.sh  release.sh  scenarioViewer.sh  test.sh
scripts/windows/: bootstrap.bat
src/: Game.cpp  Game.h  LightsDemo.cpp  LightsDemo.h
src/LightmapManager/: LightmapManager.h
src/Scenarios/: Scenarios.cpp
tests/: CMakeLists.txt  CmakeLists.txt  addLight.cpp  removeLight.cpp  testUtils.hpp  test_main.cpp  wallTile.cpp
tests/BoundRayCast/: addLight.cpp  brightness.cpp  direction.cpp  removeLight.cpp  span.cpp  updateLight.cpp  updateTile.cpp  wallTile.cpp
tests/SimpleRayCast/: addLight.cpp  removeLight.cpp  wallTile.cpp
tests/benchmarks/: addLight.cpp  basic.cpp  main.cpp  removeLight.cpp  startup.cpp  updateLight.cpp
